# WHYcast-transcribe

./: .gitignore  AI_SPEAKER_ATTRIBUTION_SUCCESS.md  BATCH_UPDATE_GUIDE.md  BRACKET_REMOVAL_SUMMARY.md  COLLISION_HANDLING_GUIDE.md  CONTENT_FIX_SUMMARY.md  EPISODE_DISCOVERY_GUIDE.md  Episode2.txt  Episode2_ts.txt  GPU_ACCELERATION_GUIDE.md  GPU_BATCHING_FIX.md  GPU_FIX_SUCCESS.md  GPU_SUCCESS_SUMMARY.md  HEADER_FOOTER_SOLUTION.md  LICENSE  MAXIMUM_GPU_UTILIZATION.md  PROGRAMMATIC_ASSIGNMENT_SUCCESS.md  README.md  SPEAKER_IMPROVEMENTS_SUMMARY.md  SPEAKER_MAPPING_FIX_SUMMARY.md  WhycastEpisode1.md  WhycastEpisode1.txt  WhycastEpisode1_ts.txt  ai_attribution_test_results.py  api_utils.py  backup_conflicted.bat  batch_update_speaker_assignments.py  check_cuda.py  cli.py  config.py  content_generator.py  demo_simple_labels.py  diarize.py  file_utils.py  find_episodes.py  format_utils.py  generate_feed_whycast_data.py  improvement.prd  install.bat  install.sh  (+41 more)
prompts/: blog_alt1_prompt.txt.bk  blog_prompt.txt  cleanup_prompt.txt  history_extract_prompt.txt  history_extract_prompt_txt  speaker_analysis_prompt.txt  speaker_assignment.txt  speaker_assignment_prompt.txt  speaker_unknown_attribution_prompt.txt  summary_prompt.txt
src/whycast_transcribe/: cli.py  config.py  diarization.py  (+6 more)
tests/: conftest.py  test_blog_generator.py  test_cleanup.py  test_cli.py  test_config.py  test_formatters.py  test_history_generator.py  test_integration.py  test_model_manager.py  test_speaker_assigner.py  test_summarizer.py  test_utils_tokens.py
utils/: audio_processor.py  diarize.py  file_helpers.py  format_converters.py  openai_processor.py  text_processing.py  whisper_model.py
(+16 files in other folders)
